# pedal-steel

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  notes.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: copedent.rs  display.rs  guitar.rs  lib.rs  main.rs  tunings.rs
